# laddie

./: .gitignore  config.toml  config_PIG.toml  config_mitgcm.toml  config_mitgcm_wip.toml  convertmitgcm.py  pyproject.toml
analysis/: anim.py  compare.py  decomp.py
src/: '  geometry.py  integrate.py  physics.py  preprocess.py  savetools.py  tools.py
